loading should now work

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body id="top">
-  	<div class="centering hide">
+  	<div class="centering hide" id="loading">
   <div class="circle circle--1"></div>
 	<div class="circle circle--2"></div>
 </div>
-<div class="grid">
+<div class="grid" id="griddy">
   <div class="reg--item">
     <div class="item--text">
       <p class="item--name">Zürich, Switzerland.</p>
