--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,800" rel="stylesheet" />
     <script src="loading.js"></script>
   </head>
-  <body id="top">
-  	<div class="centering hide" id="loading">
+  <body>
+  	<div class="centering" id="loading">
   <div class="circle circle--1"></div>
 	<div class="circle circle--2"></div>
 </div>
-<div class="grid" id="griddy">
+<div class="grid js-loading" id="griddy">
   <div class="reg--item">
     <div class="item--text">
       <p class="item--name">Zürich, Switzerland.</p>
