--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
-<!-- Hello. -->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Cameron Barnes | Front-End Website Development &amp; Final-Year Student Portfolio</title> 
-    <meta name="description" content="Front-end website developer &amp; final year Web Development student in Manchester, UK." />
-    <meta name="keywords" content="cameron barnes, cameronspixels, web, front-end, dev, developer, front-end developer, web development student, front-end development, website development" />
-    <link rel="canonical" href="http://www.cameronspixels.co.uk/" />
-    <link rel="icon" type="image/png" href="favicon-64.png" />
-    <!-- OpenGraph. -->
-    <meta property="og:title" content="Cameron Barnes | Front-End Developer &amp; Final-Year Student" />
-    <meta property="og:url" content="http://www.cameronspixels.co.uk/" />
-    <meta property="og:description" content="Front-end website developer &amp; final year Web Development student in Manchester, UK." />
-    <meta property="og:image" content="http://www.15075407.webdevmmu.uk/img/bg-red.jpg" />
-    <!-- Twitter Cards. -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@cameronspixels" />
-    <meta name="twitter:creator" content="@cameronspixels" />
-    <meta name="twitter:url" content="https://cameronspixels.co.uk/index.html/" />
-    <meta name="twitter:title" content="Cameron Barnes | Front-End Developer &amp; Final-Year Student" />
-    <meta name="twitter:description" content="Front-end website developer &amp; final year Web Development student in Manchester, UK." />
-    <meta name="twitter:image" content="http://www.15075407.webdevmmu.uk/img/bg-red.jpg" />
-    <!-- CSS & Google Fonts. -->
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,800" rel="stylesheet" />
-    <script src="loading.js"></script>
-  </head>
-  <body>
-  	<div class="centering" id="loading">
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>A Pen by  cameron barnes.</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <div class="centering" id="loading">
   <div class="circle circle--1"></div>
 	<div class="circle circle--2"></div>
 </div>
 <div class="grid js-loading" id="griddy">
-  <div class="reg--item">
+  <div class="grid--intro">
+    <h1 class="intro--header">Welcome</h1>
+    <p class="intro--text">This is my creation of a photography portfolio using CSS grids. The page plays a CSS loading animation while the content is rendered in the background, and any spaces within the grid are filled automatically when a new item is added.</p>
+  </div>
+  <div class="reg--item" title="Photograph in Zürich, Switzerland.">
     <div class="item--text">
-      <p class="item--name">Zürich, Switzerland.</p>
+      <p class="item--name">Zürich, SU.</p>
       <a class="item--more" href="https://unsplash.com/photos/3MAmj1ZKSZA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>    
     <div class="item--inner item--1"></div>
   </div>
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Coney Island, United States of America.">
     <div class="item--text">
       <p class="item--name">Coney Island, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/vlQnJZ5rOwY" title="To the art.">See more</a>
@@ -50,23 +39,23 @@
     <div class="item--overlay"></div>  
     <div class="item--inner item--2"></div>  
   </div>
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Detroit, United States of America.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Detroit, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/jRiWB-UafGI" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--3"></div>      
   </div>
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Berlin, Germany.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Berlin, DE.</p>
+      <a class="item--more" href="https://unsplash.com/photos/yJygeDcirWI" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--4"></div>      
   </div>  
-  <div class="reg--item wide--item">
+  <div class="reg--item wide--item" title="Photograph in Portand, United States of America.">
     <div class="item--text">
       <p class="item--name">Portland, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/792ASMfWAhM" title="To the art.">See more</a>
@@ -74,31 +63,31 @@
     <div class="item--overlay"></div>  
     <div class="item--inner item--5"></div>      
   </div>  
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Lyon, France.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Lyon, FR.</p>
+      <a class="item--more" href="https://unsplash.com/photos/PVw_vtpCGaM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--6"></div>      
   </div>  
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Melbourne, Australia.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Melbourne, AU.</p>
+      <a class="item--more" href="https://unsplash.com/photos/g4aiU4mEsZM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--7"></div>      
   </div>  
-  <div class="reg--item tall--item">
+  <div class="reg--item tall--item" title="Photograph in Mumbai, India.">
     <div class="item--text">
-      <p class="item--name">Mumbai, India.</p>
+      <p class="item--name">Mumbai, IN.</p>
       <a class="item--more" href="https://unsplash.com/photos/j6PFnPTjqJs" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--8"></div>      
   </div>  
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Oakland, United States of America.">
     <div class="item--text">
       <p class="item--name">Oakland, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/5nMiGqr2Tb0" title="To the art.">See more</a>
@@ -106,7 +95,7 @@
     <div class="item--overlay"></div>  
     <div class="item--inner item--9"></div>      
   </div>  
-  <div class="reg--item tall--item">
+  <div class="reg--item tall--item" title="Photograph in Arlington, United States of America.">
     <div class="item--text">
       <p class="item--name">Arlington, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/GfmIT_pseDQ" title="To the art.">See more</a>
@@ -114,31 +103,31 @@
     <div class="item--overlay"></div>  
     <div class="item--inner item--10"></div>      
   </div>
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Toronto, Canada.">
     <div class="item--text">
-      <p class="item--name">Toronto, Canada.</p>
+      <p class="item--name">Toronto, CA.</p>
       <a class="item--more" href="https://unsplash.com/photos/KesWZ9GyJ5k" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--11"></div>     
   </div>
-  <div class="reg--item wide--item">
+  <div class="reg--item wide--item" title="Photograph in Birmingham, United Kingdom.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Birmingham, UK.</p>
+      <a class="item--more" href="https://unsplash.com/photos/qX9Ie7ieb1E" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--12"></div>      
   </div>
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in Bristol, United Kingdom.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">Bristol, UK.</p>
+      <a class="item--more" href="https://unsplash.com/photos/yDs3UCbhTX4" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--13"></div>      
   </div>   
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in London, United Kingdom.">
     <div class="item--text">
       <p class="item--name">London, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/rss7GCL_KVo" title="To the art.">See more</a>
@@ -146,22 +135,31 @@
     <div class="item--overlay"></div>  
     <div class="item--inner item--14"></div>      
   </div>   
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in New York, United States of America.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">New York, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/plqlCp0KjsM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--15"></div>      
   </div>   
-  <div class="reg--item">
+  <div class="reg--item" title="Photograph in New York, United States of America.">
     <div class="item--text">
-      <p class="item--name">This is art.</p>
-      <a class="item--more" href="#" title="To the art.">See more</a>
+      <p class="item--name">New York, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/eIhH7RTlTZA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--16"></div>  
   </div>
 </div>
-  </body>
+  
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
+</body>
+
 </html>
