--- a/index.html
+++ b/index.html
@@ -159,6 +159,46 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--16"></div>  
   </div>
+  <div class="reg--item tall--item" title="Photograph in Melbourne, Australia.">
+    <div class="item--text">
+      <p class="item--name">Melbourne, AU.</p>
+      <a class="item--more" href="https://unsplash.com/photos/fZCZ8_tdPyY" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--17"></div>  
+  </div>
+  <div class="reg--item" title="Photograph in Detroit, United States of America.">
+    <div class="item--text">
+      <p class="item--name">Detroit, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/FqnkBeq1wGg" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--18"></div>  
+  </div>
+  <div class="reg--item" title="Photograph in London, United Kingdom.">
+    <div class="item--text">
+      <p class="item--name">London, UK.</p>
+      <a class="item--more" href="https://unsplash.com/photos/0WAJhFK7Q9o" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--19"></div>  
+  </div>
+  <div class="reg--item" title="Photograph in New York, United States of America.">
+    <div class="item--text">
+      <p class="item--name">New York, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/EeYHGdfTlnU" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--20"></div>  
+  </div>
+  <div class="reg--item wide--item" title="Photograph in Milwaukee, United States of America.">
+    <div class="item--text">
+      <p class="item--name">Milwaukee, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--21"></div>  
+  </div>
 </div>
   
   
