--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="scss/style.css">
 
   
 </head>
@@ -199,7 +199,33 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--21"></div>  
   </div>
+  <div class="reg--item hidden" id="classHiding" title="Photograph in Milwaukee, United States of America.">
+    <div class="item--text">
+      <p class="item--name"></p>
+      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--22"></div>  
+  </div>
+  <div class="reg--item tall--item hidden" title="Photograph in Milwaukee, United States of America.">
+    <div class="item--text">
+      <p class="item--name"></p>
+      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--23"></div>  
+  </div>
+  <div class="reg--item hidden" title="Photograph in Milwaukee, United States of America.">
+    <div class="item--text">
+      <p class="item--name"></p>
+      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <div class="item--inner item--24"></div>  
+  </div>
 </div>
+<button class="load--more" id="load--button" value="loadMore" onClick="removeHidden();">Load More</button>
+
   
   
 
