--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--21"></div>  
   </div>
-  <div class="reg--item hidden" id="classHiding" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item hidden" id="imageHiding1" title="Photograph in Milwaukee, United States of America.">
     <div class="item--text">
       <p class="item--name"></p>
       <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
@@ -207,7 +207,7 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--22"></div>  
   </div>
-  <div class="reg--item tall--item hidden" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item tall--item hidden" id="imageHiding2" title="Photograph in Milwaukee, United States of America.">
     <div class="item--text">
       <p class="item--name"></p>
       <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
@@ -215,7 +215,7 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--23"></div>  
   </div>
-  <div class="reg--item hidden" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item hidden" id="imageHiding3" title="Photograph in Milwaukee, United States of America.">
     <div class="item--text">
       <p class="item--name"></p>
       <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
