--- a/index.html
+++ b/index.html
@@ -199,32 +199,32 @@ For 2x2, add both classes to the parent <div>.
     <div class="item--overlay"></div>  
     <div class="item--inner item--21"></div>  
   </div>
-  <div class="reg--item hidden" id="imageHiding1" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item hidden" id="imageHiding1" title="Photograph in London, United Kingom.">
     <div class="item--text">
-      <p class="item--name"></p>
-      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+      <p class="item--name">London, UK.</p>
+      <a class="item--more" href="https://unsplash.com/photos/6SPP_IiDuTA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--22"></div>  
   </div>
-  <div class="reg--item tall--item hidden" id="imageHiding2" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item tall--item hidden" id="imageHiding2" title="Photograph in Seville, Spain.">
     <div class="item--text">
-      <p class="item--name"></p>
-      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+      <p class="item--name">Seville, ES.</p>
+      <a class="item--more" href="https://unsplash.com/photos/Ns216N3sCAA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--23"></div>  
   </div>
-  <div class="reg--item hidden" id="imageHiding3" title="Photograph in Milwaukee, United States of America.">
+  <div class="reg--item hidden" id="imageHiding3" title="Photograph in Tel Aviv-Yafo, Israel.">
     <div class="item--text">
-      <p class="item--name"></p>
-      <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
+      <p class="item--name">Tel Aviv-Yafo, IR.</p>
+      <a class="item--more" href="https://unsplash.com/photos/8pOTAtyd_Mc" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
     <div class="item--inner item--24"></div>  
   </div>
 </div>
-<button class="load--more" id="load--button" value="loadMore" onClick="removeHidden();">Load More</button>
+<button class="load--more" id="load--button" value="loadMore" onClick="removeHidden();">Load More (Up to 3)</button>
 
   
   
