Changed background images to image tag.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Responsive Photo Grids</title>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
       <link rel="stylesheet" href="scss/style.css">
@@ -31,201 +31,290 @@ For 2x2, add both classes to the parent <div>.
     <h1 class="intro--header">Hello</h1>
     <p class="intro--text">This is my creation of a photography portfolio using CSS grids. The page plays a CSS loading animation while the content is downloded in the background, and any spaces within the grid are filled automatically when a new item is added.</p>
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Zürich, Switzerland.">
     <div class="item--text">
       <p class="item--name">Zürich, SU.</p>
       <a class="item--more" href="https://unsplash.com/photos/3MAmj1ZKSZA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>    
-    <div class="item--inner item--1"></div>
+    <img class="item--img" src="https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-0.3.5&s=44608053c9aec36fffb639e3936884ac&auto=format&fit=crop&w=2015&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Coney Island, United States of America.">
     <div class="item--text">
       <p class="item--name">Coney Island, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/vlQnJZ5rOwY" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--2"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1501421018470-faf26f6b1bef?ixlib=rb-0.3.5&s=aece461743812241e24a9528dc0fdb64&auto=format&fit=crop&w=1950&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Detroit, United States of America.">
     <div class="item--text">
       <p class="item--name">Detroit, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/jRiWB-UafGI" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--3"></div>      
+    <img class="item--img" src="https://images.unsplash.com/photo-1503259901638-6bf44a4cd670?ixlib=rb-0.3.5&s=1d35913f04b30cf5027fe2f09a7371d9&auto=format&fit=crop&w=1294&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Berlin, Germany.">
     <div class="item--text">
       <p class="item--name">Berlin, DE.</p>
       <a class="item--more" href="https://unsplash.com/photos/yJygeDcirWI" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--4"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1491403938640-b57372002c94?ixlib=rb-0.3.5&s=2835b62d602bfedee80fafb60a90dc19&auto=format&fit=crop&w=1350&q=80">      
+  </div>
+  
+  
   <div class="reg--item wide--item" title="Photograph in Portand, United States of America.">
     <div class="item--text">
       <p class="item--name">Portland, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/792ASMfWAhM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--5"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1502210220257-b267d9c86214?ixlib=rb-0.3.5&s=a856ee8f49413731084c1d113d330bc4&auto=format&fit=crop&w=1350&q=80"> 
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in Lyon, France.">
     <div class="item--text">
       <p class="item--name">Lyon, FR.</p>
       <a class="item--more" href="https://unsplash.com/photos/PVw_vtpCGaM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--6"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1490487135801-031cf13ab462?ixlib=rb-0.3.5&s=b424db189618b2b9dbdd222fca08e6b5&auto=format&fit=crop&w=1352&q=80">     
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in Melbourne, Australia.">
     <div class="item--text">
       <p class="item--name">Melbourne, AU.</p>
       <a class="item--more" href="https://unsplash.com/photos/g4aiU4mEsZM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--7"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1501569420805-e4dd535ec970?ixlib=rb-0.3.5&s=f9fc15799cbd406b806ea8e306381e43&auto=format&fit=crop&w=1350&q=80">    
+  </div>
+  
+  
   <div class="reg--item tall--item" title="Photograph in Mumbai, India.">
     <div class="item--text">
       <p class="item--name">Mumbai, IN.</p>
       <a class="item--more" href="https://unsplash.com/photos/j6PFnPTjqJs" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--8"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1463277261818-d24c3cdbe40e?ixlib=rb-0.3.5&s=9a19eee02877074ccb33e9e669f10dab&auto=format&fit=crop&w=634&q=80">    
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in Oakland, United States of America.">
     <div class="item--text">
       <p class="item--name">Oakland, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/5nMiGqr2Tb0" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--9"></div>      
-  </div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1497033110244-bb22d252704e?ixlib=rb-0.3.5&s=0563070b66661f968073a5ea4f96af99&auto=format&fit=crop&w=1371&q=80"> 
+  </div>
+  
+  
   <div class="reg--item tall--item" title="Photograph in Arlington, United States of America.">
     <div class="item--text">
       <p class="item--name">Arlington, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/GfmIT_pseDQ" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--10"></div>      
+    <img class="item--img" src="https://images.unsplash.com/photo-1514575619841-1a3d949d3277?ixlib=rb-0.3.5&s=cd492506d8101a9382bf1359ac955c75&auto=format&fit=crop&w=564&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Toronto, Canada.">
     <div class="item--text">
       <p class="item--name">Toronto, CA.</p>
       <a class="item--more" href="https://unsplash.com/photos/KesWZ9GyJ5k" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--11"></div>     
+    <img class="item--img" src="https://images.unsplash.com/photo-1502868032459-aa78309e3503?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a6cda7a50c043155f3c0a9b6960a9eff&auto=format&fit=crop&w=1350&q=80">
   </div>
+  
+  
   <div class="reg--item wide--item" title="Photograph in Birmingham, United Kingdom.">
     <div class="item--text">
       <p class="item--name">Birmingham, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/qX9Ie7ieb1E" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--12"></div>      
+    <img class="item--img" src="https://images.unsplash.com/photo-1453814235491-3cfac3999928?ixlib=rb-0.3.5&s=528b061cef02f0c33c50f2b05e8b5619&auto=format&fit=crop&w=1350&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Bristol, United Kingdom.">
     <div class="item--text">
       <p class="item--name">Bristol, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/yDs3UCbhTX4" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--13"></div>      
-  </div>   
+    <img class="item--img" src="https://images.unsplash.com/photo-1495482432709-15807c8b3e2b?ixlib=rb-0.3.5&s=6d360685125b642b273028564997fbc3&auto=format&fit=crop&w=1352&q=80">
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in London, United Kingdom.">
     <div class="item--text">
       <p class="item--name">London, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/rss7GCL_KVo" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--14"></div>      
-  </div>   
+    <img class="item--img" src="https://images.unsplash.com/photo-1517696600874-1d19b7e42b21?ixlib=rb-0.3.5&s=94d7c303227a36ca61313291559a9626&auto=format&fit=crop&w=1950&q=80">
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in New York, United States of America.">
     <div class="item--text">
       <p class="item--name">New York, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/plqlCp0KjsM" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--15"></div>      
-  </div>   
+    <img class="item--img" src="https://images.unsplash.com/photo-1498484350622-344a7eab522f?ixlib=rb-0.3.5&s=4aaa35d2dcceebfbf91e8a770a67f6e4&auto=format&fit=crop&w=1350&q=80">
+  </div>
+  
+  
   <div class="reg--item" title="Photograph in New York, United States of America.">
     <div class="item--text">
       <p class="item--name">New York, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/eIhH7RTlTZA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--16"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1490535004195-099bc723fa1f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=53d16e51c95625168dde435dbd0aaa45&auto=format&fit=crop&w=1480&q=80">
   </div>
+  
+  
   <div class="reg--item tall--item" title="Photograph in Melbourne, Australia.">
     <div class="item--text">
       <p class="item--name">Melbourne, AU.</p>
       <a class="item--more" href="https://unsplash.com/photos/fZCZ8_tdPyY" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--17"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1504685641750-680d1a6a5536?ixlib=rb-0.3.5&s=8f6fa37ef4f22205aae60998daf165f1&auto=format&fit=crop&w=800&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in Detroit, United States of America.">
     <div class="item--text">
       <p class="item--name">Detroit, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/FqnkBeq1wGg" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--18"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1505868900972-a7ed025e680b?ixlib=rb-0.3.5&s=9c76413dbf299dae03c8b2aeb6db39a5&auto=format&fit=crop&w=1350&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in London, United Kingdom.">
     <div class="item--text">
       <p class="item--name">London, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/0WAJhFK7Q9o" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--19"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1508341421810-36b8fc06075b?ixlib=rb-0.3.5&s=40aa58c6e0450d4e2e4b7da8a440afe5&auto=format&fit=crop&w=2567&q=80">
   </div>
+  
+  
   <div class="reg--item" title="Photograph in New York, United States of America.">
     <div class="item--text">
       <p class="item--name">New York, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/EeYHGdfTlnU" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--20"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1503442421232-da6e4efd1d23?ixlib=rb-0.3.5&s=2a32e84e3e6d26670d3e87ac54edb998&auto=format&fit=crop&w=1343&q=80">
   </div>
+  
+  
   <div class="reg--item wide--item" title="Photograph in Milwaukee, United States of America.">
     <div class="item--text">
       <p class="item--name">Milwaukee, US.</p>
       <a class="item--more" href="https://unsplash.com/photos/Ra_XAMExk8c" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--21"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1505771582525-59a79c60af24?ixlib=rb-0.3.5&s=44d17c15b3bd53bc97a6ce7c53579649&auto=format&fit=crop&w=2689&q=80">
   </div>
+  
+  
   <div class="reg--item hidden" id="imageHiding1" title="Photograph in London, United Kingom.">
     <div class="item--text">
       <p class="item--name">London, UK.</p>
       <a class="item--more" href="https://unsplash.com/photos/6SPP_IiDuTA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--22"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1490289438248-56f597396eca?ixlib=rb-0.3.5&s=809f505bb340fbacac1ef9e14dce23de&auto=format&fit=crop&w=1350&q=80">
   </div>
+  
+  
   <div class="reg--item tall--item hidden" id="imageHiding2" title="Photograph in Seville, Spain.">
     <div class="item--text">
       <p class="item--name">Seville, ES.</p>
       <a class="item--more" href="https://unsplash.com/photos/Ns216N3sCAA" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--23"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1503169483-419b860b9208?ixlib=rb-0.3.5&s=c112e3a0571af6a5db0fc948eedde3d9&auto=format&fit=crop&w=934&q=80">
   </div>
+  
+  
   <div class="reg--item hidden" id="imageHiding3" title="Photograph in Tel Aviv-Yafo, Israel.">
     <div class="item--text">
       <p class="item--name">Tel Aviv-Yafo, IR.</p>
       <a class="item--more" href="https://unsplash.com/photos/8pOTAtyd_Mc" title="To the art.">See more</a>
     </div>
     <div class="item--overlay"></div>  
-    <div class="item--inner item--24"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1495106245177-55dc6f43e83f?ixlib=rb-0.3.5&s=c5139029b539196374a27806c0f10503&auto=format&fit=crop&w=1350&q=80">
   </div>
+  
+  
+  <div class="reg--item wide--item hidden" id="imageHiding4" title="Photograph in Berlin, Germany.">
+    <div class="item--text">
+      <p class="item--name">Berlin, DE.</p>
+      <a class="item--more" href="https://unsplash.com/photos/vjUtAhK_0uQ" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1457877916676-133b53113613?ixlib=rb-0.3.5&s=13fea3d4669cfcd34a906d6a458d2eba&auto=format&fit=crop&w=2125&q=80">
+  </div>
+  
+  
+  <div class="reg--item hidden" id="imageHiding5" title="Photograph in Dresden, Germany.">
+    <div class="item--text">
+      <p class="item--name">Dresden, DE.</p>
+      <a class="item--more" href="https://unsplash.com/photos/000djfUJhqQ" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1484556142984-1105a760b24e?ixlib=rb-0.3.5&s=bbfdc37ee64eb16e87cee6008464f8a0&auto=format&fit=crop&w=1351&q=80">
+  </div>
+  
+  
+  <div class="reg--item hidden" id="imageHiding6" title="Photograph in Monreal, Canada.">
+    <div class="item--text">
+      <p class="item--name">Montreal, CA.</p>
+      <a class="item--more" href="https://unsplash.com/photos/O6hZIDm4dW4" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1502569987184-f23646434376?ixlib=rb-0.3.5&s=607cca718563cda59a65e54c07ef1e21&auto=format&fit=crop&w=1350&q=80">
+  </div>
+  
+  
+  <div class="reg--item hidden" id="imageHiding7" title="Photograph in Houston, United States of America.">
+    <div class="item--text">
+      <p class="item--name">Houston, US.</p>
+      <a class="item--more" href="https://unsplash.com/photos/82mMNoKM_eM" title="To the art.">See more</a>
+    </div>
+    <div class="item--overlay"></div>  
+    <img class="item--img" src="https://images.unsplash.com/photo-1483940650466-c67fadc181ea?ixlib=rb-0.3.5&s=7738366060ad067a301c66156619ba93&auto=format&fit=crop&w=1457&q=80">
+  </div>
+  
+  
 </div>
-<button class="load--more" id="load--button" value="loadMore" onClick="removeHidden();">Load More (Up to 3)</button>
-
+<button class="load--more" id="load--button" value="loadMore" onClick="removeHidden();">Load More (Up to 7)</button>
   
   
 
